# Legged-Robot-Movability-Cuda

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Header.h  HeaderCPP.h  HeaderCUDA.h  LAUNCH.bash  LAUNCH_HOME.bash  LAUNCH_SSH.bash  LAUNCHbench.bash  LICENSE  OpenGL_viz.cpp  RBDL_benchmark.h  README.md  Session.vim  after.py  array_vizu_1D.py  before.py  bench.cpp  benchIllu.bash  benchIllu.py  circleIllu.bash  circleIllu.py  circles.cu.h  collision.cu  collision.cu.h  cpp_code.cpp  create_virdis_tex.cu  cross_compiled.cu  cross_compiled.cuh  cuda_code.cu  cuda_main.cu  cuda_mess.cu  cuda_openGLmess.cu  cuda_using_textures.cu  cuda_util.cu  cuda_util.cuh  cuda_util.h  cuda_virdis.cu  (+32 more)
bdata/jetson/: dcpu.csv  dgpu.csv  rbdl.csv  rcpu.csv  rgpu.csv
bdata/pc/: dcpu.csv  dgpu.csv  rbdl.csv  rcpu.csv  rgpu.csv
image/: benchBar.eps  benchIllu.eps  circleIllu.eps
